# openapi/servergen/go/model__balances_post_request.go
@@ -1,0 +1,51 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Crypto Wallet REST API
+ *
+ * REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies with fiat currency conversion, future-proof. 
+ *
+ * API version: 1.0.2
+ */
+
+package cryptowalletrest
+
+
+
+
+type BalancesPostRequest struct {
+
+	Requests []BalancesPostRequestRequestsInner `json:"requests"`
+
+	// Default fiat currency symbol for all requests if not specified individually
+	FiatSymbol string `json:"fiat_symbol,omitempty"`
+}
+
+// AssertBalancesPostRequestRequired checks if the required fields are not zero-ed
+func AssertBalancesPostRequestRequired(obj BalancesPostRequest) error {
+	elements := map[string]interface{}{
+		"requests": obj.Requests,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	for _, el := range obj.Requests {
+		if err := AssertBalancesPostRequestRequestsInnerRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertBalancesPostRequestConstraints checks if the values respects the defined constraints
+func AssertBalancesPostRequestConstraints(obj BalancesPostRequest) error {
+	for _, el := range obj.Requests {
+		if err := AssertBalancesPostRequestRequestsInnerConstraints(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
