# openapi/servergen/go/model__balances_post_request_requests_inner.go
@@ -1,0 +1,46 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Crypto Wallet REST API
+ *
+ * REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies with fiat currency conversion, future-proof. 
+ *
+ * API version: 1.0.2
+ */
+
+package cryptowalletrest
+
+
+
+
+type BalancesPostRequestRequestsInner struct {
+
+	// The cryptocurrency symbol (BTC, ETH, etc.)
+	CryptoSymbol string `json:"crypto_symbol"`
+
+	// The cryptocurrency address or xpub
+	Address string `json:"address"`
+
+	// The fiat currency symbol for conversion (USD, EUR, CAD, etc.)
+	FiatSymbol string `json:"fiat_symbol,omitempty"`
+}
+
+// AssertBalancesPostRequestRequestsInnerRequired checks if the required fields are not zero-ed
+func AssertBalancesPostRequestRequestsInnerRequired(obj BalancesPostRequestRequestsInner) error {
+	elements := map[string]interface{}{
+		"crypto_symbol": obj.CryptoSymbol,
+		"address": obj.Address,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertBalancesPostRequestRequestsInnerConstraints checks if the values respects the defined constraints
+func AssertBalancesPostRequestRequestsInnerConstraints(obj BalancesPostRequestRequestsInner) error {
+	return nil
+}
